# qtsni-theme

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  flatpakutils.h  main.cpp  qtsni.json  qtsnisystemtrayicon.cpp  qtsnisystemtrayicon.h  qtsnitheme.cpp  qtsnitheme.h
